@@ -1,3 +1,9 @@
+>> 25.03.2011
+[CO]
+- Updated "Newton Game Dynamics" from "2.24"(Linux)/"2.28"(Windows) to "2.32" (first free open-source version of this physics library)
+
+
+
 >> 15.03.2011
 [CO]
 - Added DirectX 11
