@@ -1,4 +1,4 @@
-﻿Newton Game Dynamics 2.28 for Windows and 2.24 for Linux
-- License: See "License.txt"
+﻿Newton Game Dynamics 2.32
+- Newton zlib license: See "License.txt"
 - Used by the physics backend "PLPhysicsNewton" (external Windows dependencies: "newton.dll")
 - Download from: http://www.newtondynamics.com/
