@@ -32,7 +32,7 @@
 pl_module_plugin("PLPhysicsNewton")
 	pl_module_vendor("Copyright (C) 2002-2011 by The PixelLight Team")
 	pl_module_license("GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version")
-	pl_module_description("Newton Game Dynamics 2.20 (http://www.newtondynamics.com/) physics implementation")
+	pl_module_description("Newton Game Dynamics 2.32 (http://www.newtondynamics.com/) physics implementation")
 	pl_module_dependencies_win32_release("newton.dll")
 	pl_module_dependencies_win32_debug("newton.dll")
 	pl_module_dependencies_win64_release("newton64.dll")
